--- a/app/src/main/res/layout/activity_pay_pal.xml
+++ b/app/src/main/res/layout/activity_pay_pal.xml
@@ -25,13 +25,29 @@
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
 
-
         <Button
             android:id="@+id/PayBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pay for a manicure"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:text="View Cart"
             android:visibility="visible" />
+
+        <Button
+            android:id="@+id/addPedicureToCart"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:layout_margin="100dp"
+            android:text="Pedicure"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/addManicureToCart"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:text="Manicure"
+            android:layout_marginTop="200dp"
+            android:visibility="visible" />
+
 
 
 </RelativeLayout>
